# MLX8-W2-DocumentSearch

./: .gitignore  README.md  download_ms_marco.py  gpu-setup.sh  main.py  pyproject.toml
.aj/: training.py  training_cpu.py  training_cpu_v2.py  two_tower.ipynb  two_tower_v2.ipynb  twotower_final.pt  vocab_new.json
.ben/: README.md  README_checkpoint_finder.md  find_best_checkpoint.py  start_demo.py
.ben/evaluation/: README.md  eval_integration.py  evaluate_all_checkpoints.py  example_integration.py  ms_marco_evaluator.py
.ben/preprocessing/: generate_triplets.py
.ben/text_embeddings/: train_text_embeddings_cbow_msmarco.py
.ben/training/: README_wandb.md  sweep_config.yaml  train_two_tower_from_triplets.py  train_with_eval.py  train_with_wandb.py  two_tower_model.py
.ben/vector_db/: FINAL_SUMMARY.md  README.md  README_search_api.md  README_sqlite_caching.md  README_unified_search.md  cache_from_sqlite.py  document_store.py  example_usage.py  redis_config.template.json  redis_vector_db.py  redis_vector_store.py  search_api.py  test_api.py  unified_search.py
.ben/web/: QUICKSTART.md  (+5 more)
.charles/: .env.example  __init__.py  bert_inference.py  data_processing.py  docker-compose.yml  dp_all.sh  duckdb-sql.md  github-setup.sh  inference_test.py  logging_utils.py  redis_vector_test.py  two-tower.py  two_tower_rnn.py  two_tower_tiny.py  word2vec_utils.py
.maria/: .gitignore  Dockerfile  data.py  evaluate.py  load_and_train_text8.py  parallel_encoders.py  requirements.txt  retrieve.py  search_app.py  train_two_tower.py  two_tower.py
course-materials/: README.md
(+3 files in other folders)
