[project]
name = "mlx8-w2-documentsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.0",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
    "torch<=2.2",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.0",
    "jupyter>=1.1.1",
    "psycopg>=3.2.9",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "numpy>=1.26,<2.0",
    "pyarrow>=14.0.0,<15.0.0",
    "datasets>=2.19.2",
    "colorama>=0.4.6",
]
