[project]
name = "mlx8-w2-documentsearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.0",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
    "torch<=2.2",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.0",
    "jupyter>=1.1.1",
    "psycopg>=3.2.9",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "numpy>=1.26,<2.0",
    "pyarrow>=14.0.0,<15.0.0",
    "datasets>=2.19.2",
    "colorama>=0.4.6",
    "sentence-transformers>=4.1.0",
    "gensim>=4.3.3",
    "redis>=6.2.0",
    "faiss-cpu>=1.8.0; sys_platform == 'darwin'",
    "faiss-gpu-cu12>=1.11.0; sys_platform == 'linux'",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
]
